# simplifier

./: .clang-format  .clang-tidy  .gitignore  BENCHMARKING.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_RESULTS.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: csat_tests.yml
app/: simplifier.cpp  simplify.cpp
benchmark/: representative_benchmarks.tar.xz
src/: algo.hpp
src/common/: csat_types.hpp  operators.hpp
src/parser/: bench_to_circuit.hpp  ibench_parser.hpp  iparser.hpp
src/simplification/: circuits_db.hpp  composition.hpp  constant_gate_reducer.hpp  duplicate_gates_cleaner.hpp  duplicate_operands_cleaner.hpp  nest.hpp  reduce_not_composition.hpp  redundant_gates_cleaner.hpp  strategy.hpp  three_inputs_optimization.hpp  three_inputs_optimization_bench.hpp  transformer_base.hpp
src/simplification/utils/: circuits_db.hpp  three_coloring.hpp  two_coloring.hpp
src/structures/assignment/: iassignment.hpp  vector_assignment.hpp
src/structures/circuit/: dag.hpp  gate_info.hpp  icircuit.hpp  icircuit_builder.hpp
src/utility/: converters.hpp  encoder.hpp  logger.hpp  random.hpp  string_utils.hpp  write_utils.hpp
tests/: CMakeLists.txt
tests/src_test/algorithms/: depth_first_search_test.cpp  top_sort_test.cpp
tests/src_test/common/: nt_operators_test.cpp  operators_test.cpp
tests/src_test/parser/: bench_parser_test.cpp
tests/src_test/simplification/: constant_gate_reducer.cpp  duplicate_gates_cleaner.cpp  duplicate_operands_cleaner.cpp  reduce_not_composition.cpp  redundant_gates_cleaner.cpp
tests/src_test/simplification/utils/: three_coloring.cpp  two_coloring.cpp
tests/src_test/structures/assignment/: vector_assignment_test.cpp
tests/src_test/structures/circuit/: dag_test.cpp
tests/src_test/utility/: encoder_test.cpp
tools/: abc_resyn2.py  abc_resyn_aig_under_50000.py  check_equiv.py  check_equiv_by_abc_cec.py  cli  cli_group.py  click  collect_sizes_aig.py  pyproject.toml  requirements.txt  resyn_after_simp.py  size.py  table_2_finalizer.py  table_3_finalizer.py  table_4_finalizer.py  utils.py
tools/dependencies/: black-24.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  black-24.10.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  docformatter-1.7.5-py3-none-any.whl  libcst-1.5.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  libcst-1.5.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  stdlibs-2024.5.15-py3-none-any.whl  trailrunner-1.4.0-py3-none-any.whl  usort-1.0.8.post1-py3-none-any.whl
