[tool.poetry]
name = "simplify_tools"
version = "0.1.0"
description = "Tools used to benchmark tool 'simplify'."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "LICENCE"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Temporary guard against occasional publishing.
    "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^10.4.0"
typing-extensions = "^4.12.2"
click = "^8.1.7"
tqdm = "^4.66.5"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 88
skip-string-normalization = 1
