[tool.poetry]
name = "simplify_experiment_tools"
version = "0.1.0"
description = "Tools used to benchmark the 'simplify' tool."
authors = ["Your Name <you@example.com>"]
readme = "../README.md"
license = "../LICENCE"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Guard against occasional publishing.
    "Private :: Do not Upload",
]
dependencies = [
    "black==24.10.0",
    "click==8.1.7",
    "docformatter==1.7.5",
    "tqdm==4.66.5",
    "pandas==2.2.3",
    "usort==1.0.8.post1",
]

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.usort]
merge_imports = true

[tool.docformatter]
black = true
blank = true
recursive = true
pre-summary-newline = true
